<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"


    tools:context=".History">
    <LinearLayout
       android:id="@+id/roundedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text= "@string/dream_diary"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="80dp"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/delete_selected"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:src="@drawable/baseline_delete_24"
           android:alpha="0"


            app:tint="@color/primary"
            android:contentDescription="@string/delete_items" />
        <Button
            android:id="@+id/select_all"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/black"
            android:alpha="0"
            android:contentDescription="@string/select_all"
            android:layout_marginEnd="10dp"
            android:background="@drawable/baseline_select_all_24"
            android:layout_marginStart="8dp" />


    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayoutborder"
        android:layout_margin="10dp"
        app:queryHint="Search your dreams here..."
        app:iconifiedByDefault="false"
  />


    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:text="@string/to_access_the_history_feature_please_sign_in_to_your_account_in_settings_window"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRec"
        android:name="com.softylogics.dreamai.ui.login.History"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        android:visibility="gone"
        tools:context=".History"

        tools:listitem="@layout/layout_history_item" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="center"

            />

    </FrameLayout>
</LinearLayout>
