<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".JournalFragment">

    <com.softylogics.dreamai.CircleImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:src="@drawable/user_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dream Interpretation Detail"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/primary"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/wholeScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/txtResultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/textresult_bg"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    android:src="@drawable/user_icon"
                    android:contentDescription="@string/user_icon" />

                <TextView
                    android:id="@+id/txtPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:textColor="@color/black"

                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="12dp"
                    android:scrollbars="vertical"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textresult_bg"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"

                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/logo"
                        android:contentDescription="@string/ai_dream_interpreter_icon" />

                    <TextView
                        android:id="@+id/txtResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:textColor="@color/black"

                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="12dp"
                        android:scrollbars="vertical"

                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnShareInter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:backgroundTint="@color/primary"
                    android:layout_marginEnd="20dp"
                    android:alpha="0.7"
                    android:visibility="gone"
                    android:text="@string/share"
                    />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>